--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 10px;
-    background-color: #f3f3f3;
+    background-color: #F8F9FB;
 }
 
 h1 {
@@ -52,7 +52,7 @@ nav ul li img {
 
 .section-1 {
     background-color: yellow;
-    padding: 80px 0;
+    padding: 80px 0 60px 0;
     text-align: center;
 }
 
@@ -60,7 +60,7 @@ nav ul li img {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 80px 0;
+    padding: 50px 0;
 }
 
 .section-1 img {
@@ -88,7 +88,7 @@ section {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px 0;
+    padding: 30px 0;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -106,13 +106,14 @@ section li {
 }
 
 footer {
-    background-color: black;
+    background-color: #262626;
     color: white;
     display: flex;
     padding: 15px 0;
     font-size: 1.3em;
     justify-content: left;
     font-weight: 300;
+    line-height: 17px;
 }
 
 footer>p {
@@ -124,11 +125,22 @@ footer p:last-child {
 }
 
 #language {
+
+    appearance: none;
+    border: 1px solid #CCCCCC;
+    border-radius: 5px;
+    background: white;
     width: 20%;
-    padding: 3px;
     margin-top: 10px;
-    color: grey;
+    padding: 5px 10px;
+    font-size: 14px;
+    font-family: inherit;
+    color: rgba(0, 0, 0, 0.6);
+    height: 34px;
     cursor: pointer;
-    border-radius: 3px;
-    border-color: grey;
+}
+
+#name {
+    height: 10%;
+    width: 50%;
 }
